@@ -1,4 +1,6 @@
 ===v4.7.2===
+ * New Icon Type: Lightwell
+ * Condition icons now use the Custom Texture editbox to select their texture instead of the Choose Name editbox (for consistency)
  * Bug Fixes:
  ** (r344) Temporary fix (I hope) for the bug where OmniCC timers would randomly stop after a timer was refreshed.
  ** (r345) TellMeWhen.lua:1467 table index is nil
